--- a/src/main/resources/static/examples/components/panels.html
+++ b/src/main/resources/static/examples/components/panels.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="../../assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Danina Board</title>
+    <title>DANINA</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -69,7 +69,7 @@
                 <li class="active">
                     <a data-toggle="collapse" href="#componentsExamples" aria-expanded="true">
                         <i class="ti-package"></i>
-                        <p>Board
+                        <p>Danina Board
                             <b class="caret"></b>
                         </p>
                     </a>
@@ -120,7 +120,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#panels">Essays and Debates</a>
+                    <a class="navbar-brand" href="#panels">DANINA BOARD</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <form class="navbar-form navbar-left navbar-search-form" role="search">
@@ -172,7 +172,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Danina Board</h4>
+                                <h4 class="title">Essays and Debates</h4>
                                 <p class="category"># group name</p>
                             </div>
                             <div class="content">
