--- a/src/main/resources/static/examples/components/typography.html
+++ b/src/main/resources/static/examples/components/typography.html
@@ -89,7 +89,7 @@
 	                        <ul class="nav">
 	                            <li><a href="buttons.html">Buttons</a></li>
 	                            <li><a href="grid.html">Grid System</a></li>
-	                            <li><a href="panels.html">Panels</a></li>
+	                            <li><a href="../../index.html">Panels</a></li>
 	                            <li><a href="sweet-alert.html">Sweet Alert</a></li>
 	                            <li><a href="notifications.html">Notifications</a></li>
 	                            <li><a href="icons.html">Icons</a></li>
